<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lite_green"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cyan"
        android:gravity="center_horizontal"
        android:text="@string/cis_to_main_gate"
        android:textColor="@color/blue"
        android:textSize="30sp" />
    
    
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:background="@color/cyan"
                    android:gravity="left"
                    android:layout_gravity="fill_horizontal"
                    android:layout_weight="1" 
                    android:text="@string/starts"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/sub_heading_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/cyan"
                    android:gravity="right"
                    android:text="@string/reaches"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/sub_heading_size" />

         </LinearLayout>
    
         <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                
    
            <TextView 
                android:text="5:30PM"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/royal_blue"
                android:typeface="monospace"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:gravity="left"  
                android:padding="6dip"    
                android:layout_gravity="fill_horizontal"
                android:layout_weight="1" />
    
            <TextView 
                android:text="5:45PM"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/royal_blue"
                android:typeface="monospace"
                android:gravity="right"
                android:padding="6dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
       </LinearLayout>      

</LinearLayout>